feat(learning): complete interactive Swing learning card foundation
Inclui:
- contrato LearningCardActions contextual
- RelatedConcept e resolução de conceitos relacionados
- adapter Concept → LearningCardDocument
- conteúdo real extraído dos arquivos Markdown
- código real nos CodeBlocks
- Copy Code contextual
- Open Documentation e Explain More desacoplados
- navegação de Related Concepts
- atualização A → B sem resíduos de conteúdo
- componentes visuais Swing do card
- centralização do estilo visual
- action bar customizada
- bullets e code blocks refinados
- scrollbars e limites de tamanho
- lifecycle do popup ajustado
- HIDE_DELAY aumentado para permitir transição editor → card
- cobertura adicional de testes